Bug 23235 - cannot mount disc with / (slash) in label
Summary: cannot mount disc with / (slash) in label
Status: RESOLVED FIXED
Alias: None
Product: udisks
Classification: Unclassified
Component: operations (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-10 05:41 UTC by Pierre Ossman
Modified: 2009-08-17 10:07 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Pierre Ossman 2009-08-10 05:41:13 UTC
I get "Error creating moint (sic) point: No such file or directory" in nautilus when it attemtps to mount my disc named "RHEL/5.4 x86_64 DVD". I'm guessing it's because of the / which is used directly.

Might be some ".." attacks in here as well if that's the case. ;)

$ rpm -q DeviceKit-disks
DeviceKit-disks-004-4.fc11.x86_64

devkit-disks:

Showing information for /org/freedesktop/DeviceKit/Disks/devices/sr0
  native-path:             /sys/devices/pci0000:00/0000:00:1f.1/host3/target3:0:0/3:0:0:0/block/sr0
  device:                  11:0
  device-file:             /dev/sr0
    by-path:               /dev/disk/by-path/pci-0000:00:1f.1-scsi-0:0:0:0
  detected at:             Mon 10 Aug 2009 10:00:42 CEST
  system internal:         0
  removable:               1
  has media:               1 (detected at Mon 10 Aug 2009 14:36:47 CEST)
    detects change:        1
    detection by polling:  1
    detection inhibitable: 1
    detection inhibited:   0
  is read only:            0
  is mounted:              0
  mount paths:             
  mounted by uid:          0
  presentation hide:       0
  presentation name:       
  presentation icon:       
  size:                    3566206976
  block size:              2048
  job underway:            no
  usage:                   filesystem
  type:                    iso9660
  version:                 
  uuid:                    
  label:                   RHEL/5.4 x86_64 DVD
  optical disc:
    blank:                 0
    appendable:            0
    closed:                1
    num tracks:            1
    num audio tracks:      0
    num sessions:          1
  drive:
    vendor:                HL-DT-ST
    model:                 DVDRAM GMA-4082N
    revision:              EX01
    serial:                
    ejectable:             0
    require eject:         1
    media:                 optical_dvd
      compat:              optical_cd optical_cd_r optical_cd_rw optical_dvd optical_dvd_plus_r optical_dvd_plus_r_dl optical_dvd_plus_rw optical_dvd_r optical_dvd_ram optical_dvd_rw optical_mrw optical_mrw_w
    interface:             scsi
    if speed:              (unknown)
    ATA SMART:             not available

========================================================================
Comment 1 David Zeuthen (not reading bugmail) 2009-08-17 10:07:16 UTC
I thought we handled '/' properly already - anyway, now we replace it with '_'. Fixed in master. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.