Also be paranoid about the UUID containing '/' characters

This can't really happen (for known filesystems) so this "fix" is
really only for people playing along at home. See

 http://bugs.freedesktop.org/show_bug.cgi?id=23235

for more details.